--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "server.js",
   "author": "Code Martians",
   "dependencies": {
+    "body-parser": "~1.4.3",
     "express": "~4.6.1",
+    "method-override": "~2.1.1",
     "mongoose": "~4.4",
     "morgan": "~1.1.1",
-    "body-parser": "~1.4.3",
-    "method-override": "~2.1.1"
+    "npm": "^5.8.0"
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.5",
