--- a/charts/sulaco/Makefile
+++ b/charts/sulaco/Makefile
@@ -1,6 +1,6 @@
 CHART_REPO := http://jenkins-x-chartmuseum:8080
 CURRENT=$(pwd)
-NAME := flty
+NAME := sulaco
 OS := $(shell uname)
 RELEASE_VERSION := $(shell cat ../../VERSION)
 
