--- a/charts/sulaco/values.yaml
+++ b/charts/sulaco/values.yaml
@@ -7,7 +7,7 @@ image:
   tag: dev
   pullPolicy: IfNotPresent
 service:
-  name: flty
+  name: sulaco
   type: NodePort
   externalPort: 80
   internalPort: 8080
